--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -7,11 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Site sobre controle de gasto com o cartão de credito."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Finança</title>
   </head>
   <body>
